Added initial implementation of watch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <div>Current Time</div>
-  <div>{{currentTime}}</div> 
-  <!-- <mat-autocomplete></mat-autocomplete>  -->
+  <h1 style="text-align:center">
+    Welcome to {{ title }}!
+  </h1>
+  <div *ngFor="let clock of allClocks" style="display: inline-flex">
+    <app-watch [(cityName)] = "clock.name" (removeButtonClicked)="clock.removeButtonClicked()"></app-watch>
+  </div>
+  <input type="button" value="Add" (click)="addButtonAction()" />
 </div>
