--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<div style="display: flex; flex-direction: column; align-items: center">
   <h1 style="text-align:center">
     Welcome to {{ title }}!
   </h1>
-  <div *ngFor="let clock of allClocks" style="display: inline-flex">
+  <div *ngFor="let clock of allClocks" style="display: inline-flex" [ngClass]="{'remove-button-animation':clock.removeButtonPressed, 'add-button-animation': clock.addButtonPressed}">
     <app-watch [(cityName)] = "clock.name" (removeButtonClicked)="clock.removeButtonClicked()"></app-watch>
   </div>
   <button mat-button (click)="addButtonAction()" color="primary" mat-fab>Add</button>
